# TFNBS_Temp

./: .buildinfo  README.md  genindex.html  index.html  installation.html  objects.inv  references.html  requirements.txt  search.html  searchindex.js  setup.cfg  tfnbs.datasets.html  tfnbs.eeg_utils.html  tfnbs.html  tfnbs.nbs_utils.html  tfnbs.pairwise_tfns.html  tfnbs.tfnos.html  tfnbs.utils.html  usage.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  references.doctree  tfnbs.datasets.doctree  tfnbs.doctree  tfnbs.eeg_utils.doctree  tfnbs.nbs_utils.doctree  tfnbs.pairwise_tfns.doctree  tfnbs.tfnos.doctree  tfnbs.utils.doctree  usage.doctree
_sources/: index.rst.txt  references.rst.txt  tfnbs.eeg_utils.rst.txt  tfnbs.nbs_utils.rst.txt  tfnbs.pairwise_tfns.rst.txt  tfnbs.tfnos.rst.txt  tfnbs.utils.rst.txt  usage.rst.txt
datasets/02_BLOCK_VAR_HRF_SNR05_CORRDIFF/: READ_ME.txt  Task_A_vs_B_FDR05.mat  Task_A_vs_B_NBS_FWEextent_05.mat  Task_B_vs_A_FDR05.mat  Task_B_vs_A_NBS_FWEextent_05.mat  ground_truth_symm_matrix.mat  history.mat
docs/source/: conf.py  installation.rst  tfnbs.datasets.rst  tfnbs.rst
examples/: EEG_example.ipynb  TFNBS_Example.ipynb
tests/: test_datasets.py  test_eeg_utils.py  test_nbs_utils.py  test_pairwise_tfns.py  test_utils.py
tfnbs/: __init__.py  eeg_utils.py  pairwise_tfns.py  tfnos.py
