[metadata]
name = TFNBS_Temp
version = 1.0.0
author = N.P. Bechtereva Institute of the Human Brain, Russian Academy of Sciences
author_email = ashish@ireddy.ru
description = Threshold Free Network Based Statistics (TFNBS) Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maddoxx02/TFNBS_Temp
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    scikit-learn
    networkx
    mne
    pandas

[options.packages.find]
where = .

[options.extras_require]
dev =
    pytest
    sphinx
    sphinx-rtd-theme
